--- a/NewsMVVMSWUI/EndPoint/endpointsDev.plist
+++ b/NewsMVVMSWUI/EndPoint/endpointsDev.plist
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   endpointsDev.plist
-   NewsMVVMSWUI
-
-   Created by Jose Preatorian on 01-02-26.
-   Copyright (c) 2026 ___ORGANIZATIONNAME___. All rights reserved.
--->
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>crearIssue</key>
+	<dict>
+		<key>url</key>
+		<string>https://newsapi.org/v2/everything?q=tesla&amp;from=2026-01-01&amp;sortBy=publishedAt&amp;apiKey=c372f1092fb84910bf3166b120af9b1f</string>
+		<key>x-api-key</key>
+		<string>yL285dvequN1GLt1yUCdpiHy8L8lJOlO</string>
+	</dict>
+	<key>crearIssueTop</key>
+	<dict>
+		<key>url</key>
+		<string>https://newsapi.org/v2/everything?q=tesla&amp;from=2026-01-01&amp;sortBy=publishedAt&amp;apiKey=c372f1092fb84910bf3166b120af9b1f</string>
+		<key>x-api-key</key>
+		<string>yL285dvequN1GLt1yUCdpiHy8L8lJOlO</string>
+	</dict>
+</dict>
 </plist>
